@@ -1,3 +1,5 @@
+def:
+  * more verbose error message if coordinates of station cannot be found
 v0.4.2:
   * adapt to GFZ FDSN webservices and allow only 1 thread when downloading example data
 v0.4.1:
